Feat: sticky aniamted navbar

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                           </div>
                           <!-- small blog 4 -->
                           <div class="hot-fashion__small-blogs--item">
-                            <img class="hot-fashion__small-blogs--item-image width-100" src="/assests/img/blogs/s-blog-.png" alt="small-blogs" />
+                            <img class="hot-fashion__small-blogs--item-image width-100" src="/assests/img/blogs/s-blog-c.png" alt="small-blogs" />
                             <div class="hot-fashion__small-blogs--item-content">
                               <a class="hot-fashion__small-blogs--item-link" href="">
                                 <img src="/assests/img/icons/grey-calendar.png" alt="user" />
@@ -1533,5 +1533,6 @@
 
     <script src="/assests/js/navbar.js"></script>
     <script src="/assests/js/tab-slider.js"></script>
+    <script src="/assests/js/header-animate.js"></script>
   </body>
 </html>
